原來是 default_server 重複了，不是 vhost 目錄不存在的原因

--- a/playbooks/group_vars/phpday.yml
+++ b/playbooks/group_vars/phpday.yml
@@ -14,9 +14,9 @@ users:
 nginx_remove_default_vhost: true
 
 nginx_vhosts:
-  - listen: "80 default_server"
+  - listen: "80"
     server_name: "_"
-    root: "/var/www/html"
+    root: "/var/www/html/phpday.tw"
     index: "index.php index.html index.htm"
     state: "present"
     filename: "phpday.tw.conf"
