使用 git module 簡易將網站源碼拉到主機指定目錄
https://docs.ansible.com/ansible/latest/modules/git_module.html
https://www.ansible.com/blog/getting-started-writing-your-first-playbook

--- a/playbooks/phpday.yml
+++ b/playbooks/phpday.yml
@@ -9,3 +9,10 @@
     - geerlingguy.php
     - geerlingguy.composer
     - geerlingguy.mysql
+
+  tasks:
+    - name: Deploy source code from Github
+      git:
+        repo: 'https://github.com/zx1986/phpday-laravel'
+        dest: /var/www/html/phpday.tw
+        version: master
