再補回 default_server 設定，先前的錯誤是因為兩個 vhost 都設定 default

--- a/playbooks/group_vars/phpday.yml
+++ b/playbooks/group_vars/phpday.yml
@@ -14,7 +14,7 @@ users:
 nginx_remove_default_vhost: true
 
 nginx_vhosts:
-  - listen: "80"
+  - listen: "80 default_server"
     server_name: "_"
     root: "/var/www/html/phpday.tw"
     index: "index.php index.html index.htm"
