修正 Database 的編碼為 utf8mb4_general_ci

--- a/playbooks/group_vars/phpday.yml
+++ b/playbooks/group_vars/phpday.yml
@@ -91,7 +91,7 @@ mysql_root_password: root@phpday.tw
 mysql_databases:
   - name: phpday
     encoding: utf8
-    collation: utf8_general_ci
+    collation: utf8mb4_general_ci
 
 mysql_users:
   - name: phpday
