encoding 也要修正為 utf8mb4
character-set-server  = utf8mb4
collation-server      = utf8mb4_general_ci

--- a/playbooks/group_vars/phpday.yml
+++ b/playbooks/group_vars/phpday.yml
@@ -90,7 +90,7 @@ mysql_root_password: root@phpday.tw
 
 mysql_databases:
   - name: phpday
-    encoding: utf8
+    encoding: utf8mb4
     collation: utf8mb4_general_ci
 
 mysql_users:
