--- a/playbooks/phpday.yml
+++ b/playbooks/phpday.yml
@@ -12,6 +12,14 @@
     - geerlingguy.mysql
 
   tasks:
+    - name: Install base packages.
+      apt:
+        name: "{{ item }}"
+        state: present
+      with_items:
+        - zip
+        - htop
+
     - name: Deploy source code from Github.
       git:
         repo: 'https://github.com/zx1986/phpday-laravel'
